fix spacing

--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -25,4 +25,4 @@ $app-color-red: #dc3545;
 }
 
 $app-space-y: 1.75rem;
-$app-space-x: 2.25rem;
+$app-space-x: 1.5rem;
